# imgtools

./: CMakeLists.txt  README.md
include/: image.h
src/: color_palette.cpp  convert.cpp  convert_color_space.cpp  image.cpp  imgtools.cpp  mean_image_brightness.cpp  resize.cpp  white_balance.cpp
